--- a/styles.css
+++ b/styles.css
@@ -1362,6 +1362,32 @@
   z-index: 4;
   overflow: visible;
 }
+.center_flower_square_1{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  left: calc(50% - 90px);
+  top: calc(50% - 225px);
+  transform:translate(-50%, -50%) rotateZ(300deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+  overflow: visible;
+}
+.center_flower_square_2{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  left: calc(50% + 90px);
+  top: calc(50% + 55px);
+  transform:translate(-50%, -50%) rotateZ(120deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+  overflow: visible;
+}
 .center_flower_1 > div{
   width: 100%;
   height: 100%;
