--- a/styles.css
+++ b/styles.css
@@ -1388,6 +1388,45 @@
   z-index: 4;
   overflow: visible;
 }
+.bottom_flower_square_1{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  left: 60px;
+  top: calc(100% - 100px);
+  transform:translate(-50%, -50%) ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  overflow: visible;
+}
+.bottom_flower_square_2{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  right: -50px;
+  top: calc(100% - 90px);
+  transform:translate(-50%, -50%) rotateZ(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  overflow: visible;
+}
+.bottom_flower_square_1 > div{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: visible;
+}
+.bottom_flower_square_2 > div{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: visible;
+}
+
 .center_flower_1 > div{
   width: 100%;
   height: 100%;
@@ -1674,6 +1713,74 @@
     transform:translate(-50%, -50%) rotateZ(240deg);
   }
 }
+@keyframes rotate_bottom_little {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(235deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(245deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+}
+@keyframes rotate_bottom_little_2 {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(330deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(335deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(330deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(325deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(330deg);
+  }
+}
+@keyframes rotate_bottom_tiny {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(195deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(205deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+}
+@keyframes rotate_bottom_white {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(220deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(215deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(220deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(225deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(220deg);
+  }
+}
 .container_flower_r > img:nth-child(1){
   width: 90px;
   height: 90px;
@@ -1762,4 +1869,76 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(170deg); 
+}
+.container_flower_b > img:nth-child(1){
+  width: 95px;
+  height: 95px;
+  position: absolute;
+  top: calc(50% + 30px);
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(240deg); 
+  animation: rotate_bottom_little 3s infinite linear;
+}
+.container_flower_b > img:nth-child(2){
+  width: 95px;
+  height: 95px;
+  position: absolute;
+  top: calc(50% - 10px);
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(200deg); 
+  animation: rotate_bottom_tiny 3s infinite linear;
+}
+.container_flower_b > img:nth-child(3){
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  left: 40px;
+  transform: translate(-50%, -50%) rotateZ(220deg); 
+  animation: rotate_bottom_white 3s infinite linear;
+}
+.container_flower_b > img:last-child{
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  transform: translate(-50%, -50%) rotateZ(220deg); 
+  animation: rotate_bottom_white 3s infinite linear;
+}
+.container_flower_b_2 > img:nth-child(1){
+  width: 95px;
+  height: 95px;
+  position: absolute;
+  top: calc(50% + 30px);
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(330deg); 
+  animation: rotate_bottom_little_2 3s infinite linear;
+}
+.container_flower_b_2 > img:nth-child(2){
+  width: 95px;
+  height: 95px;
+  position: absolute;
+  top: calc(50% - 10px);
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(200deg); 
+  animation: rotate_bottom_tiny 3s infinite linear;
+}
+.container_flower_b_2 > img:nth-child(3){
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  left: 40px;
+  transform: translate(-50%, -50%) rotateZ(220deg); 
+  animation: rotate_bottom_white 3s infinite linear;
+}
+.container_flower_b_2 > img:last-child{
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  transform: translate(-50%, -50%) rotateZ(220deg); 
+  animation: rotate_bottom_white 3s infinite linear;
 }
