--- a/styles.css
+++ b/styles.css
@@ -1414,6 +1414,26 @@
   z-index: 2;
   overflow: visible;
 }
+.top_flower_1{
+  position: absolute;
+  width: 50%;
+  height: 15%;
+  left: 50%;
+  top: 50%;
+  transform:translate(-50%, -50%) ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 2px solid black;
+  z-index: 2;
+  overflow: visible;
+}
+.top_flower_1 > div{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: visible;
+}
 .bottom_flower_square_1 > div{
   width: 100%;
   height: 100%;
@@ -1941,4 +1961,36 @@
   left: 0px;
   transform: translate(-50%, -50%) rotateZ(220deg); 
   animation: rotate_bottom_white 3s infinite linear;
+}
+.container_flower_t > img:nth-child(1){
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: calc(50% + 10px);
+  left: calc(50% - 50px);
+  transform: translate(-50%, -50%) rotateZ(200deg); 
+}
+.container_flower_t > img:nth-child(2){
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: calc(50% + 10px);
+  left: calc(50% + 50px);
+  transform: translate(-50%, -50%) rotateZ(240deg); 
+}
+.container_flower_t > img:nth-child(3){
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: calc(50% - 10px);
+  transform: translate(-50%, -50%) rotateZ(240deg); 
+}
+.container_flower_t > img:last-child{
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(60deg); 
 }
