--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@
   }
   .section_2 > aside{
     opacity: 0;
-    transition: opacity 4s ease;
+    transition: opacity 4s linear;
   }
   
   .section_2 > p{
@@ -196,7 +196,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.4); 
-    animation: fadeInScale 8s ease-in-out forwards;   
+    animation: fadeInScale 8s linear-in-out forwards;   
     width: 190px;
     height: 190px;
     background: transparent;
@@ -301,7 +301,7 @@
 }
 .section_3 > aside{
   opacity: 0;
-  transition: opacity 4s ease;
+  transition: opacity 4s linear;
 }
 @keyframes fadeCanvas3 {
   0% {
@@ -390,7 +390,7 @@
   top: calc(50% + 145px - 230px);
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); 
-  animation: scaleSquares 4.5s ease-in-out forwards;
+  animation: scaleSquares 4.5s linear-in-out forwards;
   width: 310px;
   height: 310px;
   border: 3px solid;
@@ -402,7 +402,7 @@
   top: calc(50% + 145px - 230px);
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); 
-  animation: scaleSquares_rotate 5s ease-in-out forwards;
+  animation: scaleSquares_rotate 5s linear-in-out forwards;
   width: 310px;
   height: 310px;
   border: 3px solid;
@@ -423,6 +423,10 @@
 }
 .section_4 > img{
   opacity: 0;
+}
+.section_4 > aside{
+  opacity: 0;
+  transition: opacity 1s linear;
 }
 .section_4 > p{
   opacity: 0;
@@ -531,6 +535,10 @@
 .section_5 > img{
   opacity: 0;
 }
+.section_5 > aside{
+  opacity: 0;
+  transition: opacity 3s linear;
+}
 .section_5 > section{
   position: absolute;
   width: 90%;
@@ -614,7 +622,10 @@
 .section_6 > canvas{
   z-index: 2;
 }
-
+.section_6 > aside{
+  opacity: 0;
+  transition: opacity 3s linear;
+}
 @keyframes scaleframe_section7 {
   0% {
     opacity: 0;
@@ -1264,7 +1275,7 @@
   position: absolute;
   inset: 0;
   opacity: 0;
-  transition: 200ms opacity ease-in-out;
+  transition: 200ms opacity linear-in-out;
   transition-delay: 200ms;
 }
 
@@ -1358,7 +1369,7 @@
   width: 25%;
   height: 25%;
   left: calc(50% + 125px);
-  top: calc(35% - 105px);
+  top: calc(50% - 65px - 120px);
   transform:translate(-50%, -50%) rotateZ(5deg);
   display: flex;
   justify-content: center;
@@ -1371,7 +1382,7 @@
   width: 25%;
   height: 25%;
   left: calc(50% - 125px);
-  top: calc(43% + 105px);
+  top: calc(50% - 65px + 120px);
   transform:translate(-50%, -50%) rotateZ(190deg);
   display: flex;
   justify-content: center;
