--- a/styles.css
+++ b/styles.css
@@ -83,16 +83,25 @@
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
-.section_1--circle_counters > aside{
+.section_1--circle_counters > aside:nth-child(1){
   width: 50%;
   height: 50%;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 90%;
   transform: translate(-50%, -50%);
   z-index: 2;
 }
-.section_1--counter--circle_counter_flowers > div{
+.section_1--circle_counters > aside:nth-child(2){
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  top: 60%;
+  left: 10%;
+  transform: translate(-50%, -50%) rotateZ(170deg);
+  z-index: 2;
+}
+.section_1--counter--circle_counter_flowers > div:nth-child(1){
   transform: scale(0.25) rotateZ(15deg);
 }
 .section_1--counter > div >span{
